@@ -1,3 +1,5 @@
+* removed admin_user_id from MemberCall.list arguments
+
 === 0.3.39 2013-10-31
 * removing field average_changed from company
 === 0.3.38 2013-10-28
